--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.22.1",
     "recharts": "^2.8.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
