--- a/package.json
+++ b/package.json
@@ -8,5 +8,6 @@
     "react-router-dom": "^6.22.1",
     "react-circular-progressbar": "^2.2.0",
     "recharts": "^2.8.0"
+    "react-scripts": "5.0.1" 
   }
 }
