--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
-{
-  "name": "ku-huku-score",
-  "version": "1.0.0",
-  "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router": "^6.22.1",
-    "react-router-dom": "^6.22.1",
-    "react-circular-progressbar": "^2.2.0",
-    "recharts": "^2.8.0"
-    "react-scripts": "5.0.1" 
-  }
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
+"dependencies": {
+  "react": "^18.0.0",
+  "react-dom": "^18.0.0",
+  "react-router-dom": "^6.22.1",
+  "recharts": "^2.8.0",
+  "react-scripts": "5.0.1"  ← これが必要！
 }
